# zifra_snitcher

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp  stitcher.cpp  stitcher.h
